fix(textarea): update disabled label color for better contrast

--- a/packages/core/src/components/textarea/textarea-vars.scss
+++ b/packages/core/src/components/textarea/textarea-vars.scss
@@ -68,7 +68,7 @@
   --tds-textarea-disabled-background-secondary: var(--tds-grey-868);
   --tds-textarea-disabled-background: var(--tds-textarea-disabled-background-primary);
   --tds-textarea-disabled-placeholder: var(--tds-grey-800);
-  --tds-textarea-disabled-label: var(--tds-grey-700);
+  --tds-textarea-disabled-label: var(--tds-grey-800);
 
   // Label
   --tds-textarea-label-color: var(--tds-grey-50);
